@@ -1,3 +1,8 @@
+2001-09-14  Elliot Glaysher  <glaysher@umich.edu>
+
+	* Netcomics/GtkComics.pm: Add a small check to make comicpage be able
+	to be "run in place" in the source distribution.
+
 2001-09-14  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* Netcomics/Util.pm (load_modules): Updated to be more generalized
